# old-man-sandbox

./: README.md  fetch-brk.html
babel-parse/: bundle.js  entry.js  package.json  t.js  test.js  traverse.js
capture-sound/: index.html
create-30k/: create.js  f10k.html  f10k.js  f10k.js.map  f3k.html  f3k.js  f3k.js.map
debugger.html-bkpt/: doc-wasm-sourcemaps.html
emcc-6006/: .gitignore  README.md  entry.js  package.json  result.js  result.old.js  result.proposed.js  test.js  test.old.js  test.proposed.js
fibdbg/: Makefile  README.md  fib2_o0.html  fib2_o0.map  fib2_o0.wasm  fib2_o2.html  fib2_o2.map  fib2_o2.wasm
fibwjs/: Makefile  fib2.c  fib2.esm  fib2.esm.map  fib2.html  fib2.js  fib2.js.map  fib2.wasm  fib2.wasm.map  package.json
gcd/: .htaccess  README.md  gcd.html  gcd.rs  gcd.wasm
nosyscall/: Makefile  shuffle.c  shuffle.html  shuffle.js  shuffle.wasm
presentations/: b2g.html  ecma5.html  games-devgamm.html  games.html  shumway.html
roadshow2017_presentation/: OK-wasm-slides.odt  OK-wasm-slides.txt  index.html
rust-wasm-hey/: .gitignore  Makefile  README.md  hey.dbg.html  hey.dbg.wasm  hey.html  hey.js  hey.prod.wasm  hey.rs  hey.wasm  hey.wasm.map  hey.wast  update-map.js
sorted-es6/: bundle.es6.js  bundle.js  bundle.js.map  sorted.js  test.es6.html  test.html  test.js  webpack.config.js  webpack.es6.config.js
thunder-demos1/: .gitignore  Makefile  (+11 more)
wasmparser-wasm/: .gitignore  Cargo.toml  Makefile  update-map.js
wasmparser-wasm/src/: wasmdis.rs
wasmparser-wasm/web/: index.html  test.wasm  wasmdis.js  wasmdis.wasm  wasmdis.wasm.map
(+50 files in other folders)
